# VBI_Substrate

./: customSpec.json  customSpecRaw.json  node-key  note.txt  raw.json
data/node01/chains/kit/db/full/: 000039.sst  000041.sst  000042.sst  000043.sst  000049.sst  000060.sst  000061.sst  000062.sst  000067.sst  000068.sst  000069.sst  IDENTITY  LOG  MANIFEST-000063  OPTIONS-000053
data/node02/chains/kit/db/full/: 000039.sst  000041.sst  000042.sst  000052.sst  000053.sst  000059.sst  000060.sst  000061.sst  000062.sst  IDENTITY  LOG  MANIFEST-000055  OPTIONS-000058
data/node02/chains/kit/network/: secret_ed25519
data/node03/chains/kit/db/full/: 000039.sst  000041.sst  000042.sst  000052.sst  000053.sst  000059.sst  000060.sst  000061.sst  000065.sst  000066.sst  000067.sst  000068.sst  000069.sst  000075.sst  IDENTITY  LOG  MANIFEST-000071  OPTIONS-000074
data/node03/chains/kit/network/: secret_ed25519
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/kitties/: Cargo.toml
pallets/kitties/rpc/: Cargo.toml
pallets/kitties/rpc/runtime-api/: Cargo.toml
pallets/kitties/rpc/runtime-api/src/: lib.rs
pallets/kitties/rpc/src/: lib.rs
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/loosely-coupling/: Cargo.toml
pallets/loosely-coupling/src/: benchmarking.rs  lib.rs
pallets/tightly-coupling/: Cargo.toml
pallets/tightly-coupling/src/: benchmarking.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: run.sh
scripts/key/: aura1  aura2  aura3  gran1  gran2  gran3  run.sh
